# kde-komplex-wallpaper-engine

./: .gitignore  .kde-ci.yml  .qmlls.ini  CMakeLists.txt  README.md  convo.txt  metainfo.yaml  pack.json
.github/: FUNDING.yml
data/packs/Audio Reactive Galaxy/: pack.json
data/packs/Blueprint/: pack.json
data/packs/Lucid Dreams/: pack.json
data/packs/Mist Part 2/: pack.json
data/packs/Neon Ball Pit/: pack.json
data/packs/Neon World/: pack.json
data/packs/Neonwave Sunset/: pack.json
data/packs/PolarVisualizer/: pack.json
data/packs/Simulated Swampland/: pack.json
data/packs/Speak/: pack.json
data/packs/The Grid/: pack.json
data/packs/The Universe Within/: pack.json
data/packs/Voxel Land 2/: pack.json
data/packs/Warp Tunnel/: pack.json
data/packs/deadly_halftones/: pack.json
data/shaders/generative/: 002-Blue.frag.qsb  Accretion.frag.qsb  Electro.frag.qsb  Glow-City.frag.qsb  Orb Symmetry.frag.qsb  Phosphor.frag.qsb  Self Reflection.frag.qsb  VHS Tape Noise 2.frag.qsb  Video Glitch.frag.qsb  Windows 10 Live.frag.qsb  sdEquilateral.frag.qsb
data/shaders/manipulative/: ACII.frag.qsb  Aberrating Aberrations.frag.qsb  Brannan Filter.frag.qsb  Chroma Blur.frag.qsb  Circle Dither (Color).frag.qsb  Circular Pixels.frag.qsb  Color Invert.frag.qsb  Color Reduction.frag.qsb  Desaturate.frag.qsb  EGA.frag.qsb  Fake Thermal.frag.qsb  Gameboy.frag.qsb  Gaussian Blur.frag.qsb  Heartfelt.frag.qsb  Italic.frag.qsb  Median (Fast).frag.qsb  Melting Snow.frag.qsb  Mirror (Bottom).frag.qsb  Mirror (Left).frag.qsb  Mirror (Quad).frag.qsb  Mirror (Right).frag.qsb  Mirror (Top).frag.qsb  Modulo Dither.frag.qsb  Nearest Neighbor.frag.qsb  Night Vision.frag.qsb  Oil Painting.frag.qsb  Old Memory.frag.qsb  Perlin Noise.frag.qsb  Pixelation.frag.qsb  Posterize.frag.qsb  Quadtree.frag.qsb  Radial Blur.frag.qsb  Rain Drops.frag.qsb  Rainbow Filter.frag.qsb  Randomized Transitions (x2).frag.qsb  Ripple Distortion.frag.qsb  Scatter Blur.frag.qsb  Sepia.frag.qsb  Soft Blur.frag.qsb  Solarize.frag.qsb  (+15 more)
data/shaders/reactive/: AudioTest.frag.qsb  AudioTest2.frag.qsb
data/tools/: stc.py
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: CubemapHub.qml  KomplexModel.qml  PexelsImageHub.qml  PexelsVideoHub.qml  ShaderBuffer.qml  ShaderChannel.qml  ShaderChannelConfiguration.qml  ShaderToyHub.qml  ShaderToyModel.qml  WindowModel.qml  config.qml  main.qml
plugin/: AudioImageProvider.cpp  AudioImageProvider.h  AudioModel.cpp  AudioModel.h  CMakeLists.txt  CubemapMetadata.h  CubemapSearch.cpp  CubemapSearch.h  GeometryProvider.cpp  GeometryProvider.h  KomplexSearchModel.cpp  KomplexSearchModel.h  Komplex_global.h  PexelsImageMetadata.h  PexelsImageSearch.cpp  PexelsImageSearch.h  PexelsVideoMetadata.h  PexelsVideoModel.cpp  PexelsVideoModel.h  PexelsVideoSearch.cpp  PexelsVideoSearch.h  ShaderPackMetadata.h  ShaderPackModel.cpp  ShaderPackModel.h  ShaderToyMetadata.h  ShaderToySearchModel.cpp  ShaderToySearchModel.h  plugin.cpp  plugin.json  qmldir
tools/: README.md  ShaderCompiler.py  ShaderProcessor.py  ShaderToyProcessor.py
tools/packsrc/Alien Ocean/: pack.json
tools/packsrc/Blueprint/: pack.json
tools/packsrc/Homecomputer/: pack.json
tools/packsrc/Kaleidoscopic Warp Tunnel /: pack.json
tools/packsrc/Lucid Dreams/: pack.json
tools/packsrc/Multiscale MIP Fluid/: pack.json
tools/packsrc/Neon Rings/: pack.json
tools/packsrc/Neonwave Sunset/: pack.json
tools/packsrc/Pixel Room/: pack.json
tools/packsrc/Pixel Room 2/: pack.json
tools/packsrc/Rhodium Liquid Carbon/: pack.json
tools/packsrc/Root Sanctum/: pack.json
tools/packsrc/Sailing Beyond/: pack.json
tools/packsrc/Shimmy/: pack.json
tools/packsrc/Speak/: pack.json
tools/packsrc/The Universe Within/: pack.json
tools/packsrc/deadly_halftones/: pack.json
tools/processed/: 002-Blue.frag
tools/src/deadly_halftones/: pack.json
tools/src/generative/: A Beautiful Fractal Loop.frag  Accretion.frag  Daedra.frag  Give it Moire.frag  Orb Symmetry.frag  Phosphor.frag  Self Reflection.frag  Windows 10 Live.frag  sdEquilateral.frag
tools/src/manipulative/: ACII.frag  Aberrating Aberrations.frag  Brannan Filter.frag  Chroma Blur.frag  Circular Pixels.frag  Color Invert.frag  Color Reduction.frag  Desaturate.frag  EGA.frag  (+40 more)
(+77 files in other folders)
